# librustzcash

./: Cargo.toml
bellman/: Cargo.toml
bellman/src/: multiexp.rs
bellman/src/gadgets/: boolean.rs  num.rs
bellman/src/groth16/: prover.rs
bellman/src/groth16/tests/: dummy_engine.rs
bls12_381/: Cargo.toml
bls12_381/src/: scalar.rs
components/equihash/src/: verify.rs
ff/: Cargo.toml
ff/src/: lib.rs
group/src/: cofactor.rs
jubjub/: Cargo.toml
jubjub/src/: fr.rs  lib.rs
pczt/: Cargo.toml  build.rs
pczt/src/: lib.rs
pczt/src/proto/: mod.rs
zcash_client_backend/: Cargo.toml
zcash_client_backend/src/: address.rs  api.rs  lib.rs
zcash_client_sqlite/: Cargo.toml
zcash_client_sqlite/examples/zec_sqlite_cli/: error.rs  main.rs
zcash_client_sqlite/src/: lib.rs  persistence.rs  scan.rs  transact.rs
zcash_extensions/src/transparent/: demo.rs
zcash_primitives/: Cargo.toml
zcash_primitives/src/: consensus.rs  memo.rs  sapling.rs  serialize.rs
zcash_primitives/src/consensus/extensions/: transparent.rs
zcash_primitives/src/consensus/extensions/transparent/: demo.rs
zcash_primitives/src/extensions/: transparent.rs
zcash_primitives/src/extensions/transparent/: demo.rs
zcash_primitives/src/memo/: builder.rs  structured.rs
zcash_primitives/src/transaction/: builder.rs  components.rs
zcash_proofs/: Cargo.toml
zcash_proofs/benches/: sapling.rs
zcash_proofs/examples/: acl2.rs  zkif.rs
zcash_proofs/src/: lib.rs  prover.rs  zip304.rs
zcash_proofs/src/circuit/: ecc.rs  sapling.rs
zcash_proofs/src/sapling/: prover.rs
